Terms and Investor Plan

--- a/src/View/Appearance/index.sass
+++ b/src/View/Appearance/index.sass
@@ -13,6 +13,16 @@
     padding: 0
     font-family: DMSans-Regular
     color: var(--text-color)
+    cursor: url('../Media/Icons/curs2.svg'), auto
+
+        
+
+
+a:hover
+    cursor: url('../Media/Icons/curs.svg'), pointer 
+
+button:hover
+    cursor: url('../Media/Icons/curs.svg'), pointer 
 
 // Set transition
 *, ::before, ::after
