--- a/src/View/Appearance/index.sass
+++ b/src/View/Appearance/index.sass
@@ -16,6 +16,8 @@
     cursor: url('../Media/Icons/curs2.svg'), auto
 
         
+*
+    cursor: url('../Media/Icons/curs2.svg'), pointer 
 
 
 a:hover
