--- a/src/View/Appearance/index.sass
+++ b/src/View/Appearance/index.sass
@@ -24,7 +24,7 @@ a:hover
     cursor: url('../Media/Icons/curs2.svg'), auto 
 
 img:hover
-    cursor: url('../Media/Icons/curs2.svg'), auto 
+    cursor: url('../Media/Icons/curs2.svg'), pointer 
 
 button:hover
     cursor: url('../Media/Icons/curs2.svg'), auto 
