--- a/src/View/Appearance/index.sass
+++ b/src/View/Appearance/index.sass
@@ -22,6 +22,10 @@
 
 a:hover
     cursor: url('../Media/Icons/curs2.svg'), auto 
+    
+a:hover    
+    *
+     cursor: url('../Media/Icons/curs2.svg'), auto 
 
 img:hover
     cursor: url('../Media/Icons/curs2.svg'), auto 
@@ -46,6 +50,7 @@ img
 // Selection
 ::selection
     background-color: #00CDAE
+    cursor: url('../Media/Icons/curs2.svg'), auto 
 
 
 $color: #2575F0
@@ -68,4 +73,8 @@ a:hover
     ::selection 
         background-color: #2575F0
 
+
+.active:hover
+    *
+      cursor: url('../Media/Icons/curs2.svg'), auto 
 
