--- a/src/View/Appearance/index.sass
+++ b/src/View/Appearance/index.sass
@@ -33,6 +33,9 @@ img:hover
 button:hover
     cursor: url('../Media/Icons/curs2.svg'), auto 
 
+button:focus
+    outline: none
+
 // Set transition
 *, ::before, ::after
     transition: var(--transition)
@@ -77,3 +80,10 @@ a:hover
     *
       cursor: url('../Media/Icons/curs2.svg'), auto 
 
+.button
+    .keyboard 
+        background-color: #018080
+        color: white
+    .keyboardBlueF 
+        background-color: #251192
+        color: white
